# ai-agents

./: .gitignore  README.md
chatgpt-clone/: README.md  ai-memory.db  ai-memory.db-shm  ai-memory.db-wal  chat-gpt-clone-memory.db  dummy-agent.ipynb  facts.txt  main.py  memory_sample.json
content-pipeline-agent/: README.md  crewai_flow.html  main.py  seo_crew.py  tools.py  virality_crew.py
customer-support-agent/: README.md  customer-support-memory.db  main.py  models.py  output_guardrails.py  output_sample.txt  pyproject.toml  tools.py  workflow.py
customer-support-agent/my_agents/: account_agent.py  billing_agent.py  order_agent.py  technical_agent.py  triage_agent.py
deep-research-clone/: README.md  deep-research-team.ipynb  email-optimizer-team.ipynb  main.py  pyproject.toml  report.md  tools.py
financial-analyst/: README.md  U_invstment_advice.md  agent_analysis_korean.md  pyproject.toml  tools.py
first-agent/: main.ipynb  main.py  pyproject.toml
job-hunter-agent/: README.md  main.py  models.py  pyproject.toml
langgraph-tutorial/: README.md  langgraph.json  main.ipynb  main.py  pyproject.toml
multi-agent-architectures/: graph.py  langgraph.json  main.ipynb  pyproject.toml
multi-agent-architectures/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
news-reader-agent/: README.md  main.py  tools.py
tutor-agent/: langgraph.json  main.py  pyproject.toml
workflow-architectures/: README.md  fed_transcript.md  main.ipynb  pyproject.toml
workflow-testing/: main.py  (+2 more)
youtube-thumbnail-maker-agent/: README.md  graph.py  langgraph.json  main.ipynb  pyproject.toml
youtube-thumbnail-maker-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
(+46 files in other folders)
