[project]
name = "youtube-thumbnail-maker-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[openai]>=1.2.13",
    "langgraph>=1.1.3",
    "langgraph-cli[inmem]>=0.4.19",
    "langsmith>=0.7.22",
    "openai[aiohttp]>=2.26.0",
    "tiktoken>=0.11.0",
    "python-dotenv==1.2.2",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
